--- a/templates/listing.html
+++ b/templates/listing.html
@@ -13,6 +13,7 @@
        hx-indicator=".htmx-indicator"
        value="{{ filter_str }}"
        id="filter">
+    <a hx-get="/next_file" hx-target="#content_window" hx-swap="innerHTML">Next File</a> 
 </span>
 
 </a>
@@ -20,7 +21,7 @@
     <ul id="file_list" class="list-group">
     {% for file in files %}
         {% if file.isfile %}
-            <li id="{{ file.id }}" class="list-group-item bg-grey" hx-get="/play_file?current_path={{ current_path + "/" + file.name }}" hx-trigger="click" hx-on::after-request="set_active('{{ file.id }}')" hx-target="#content_window">{{ file.name }} - {{ file.size }} </li>
+            <li id="{{ file.id }}" class="list-group-item bg-grey" hx-get="/play_file?current_path={{ current_path + "/" + file.name }}" hx-trigger="click"  hx-target="#content_window">{{ file.name }} - {{ file.size }} </li>
         {% else %}
             <li class="list-group-item bg-grey" hx-get="/file_listing?current_path={{ current_path + "/" + file.name }}" hx-trigger="click" hx-swap="innerHTML" hx-target="#listing-div"> {{ file.name }}/ </li>
         {% endif %}
@@ -33,23 +34,5 @@
         document.getElementById("filter").focus();
     }
 
-    function set_active(file_id){
-        setClassOnListItems()
-        setClassOnActiveItem(file_id)
-    }
-
-    function setClassOnActiveItem(file_id){
-        //console.log(file_id)
-        const item = document.getElementById(file_id);
-        item.classList.add('active')
-    }
-    function setClassOnListItems() {
-        // Get all list items within the ul with id "myList"
-        const listItems = document.querySelectorAll('#file_list li');
-
-        // Loop through each list item and add the class
-        listItems.forEach(item => {
-            item.classList.remove('active');
-        });
-    } 
+    
 </script>
