--- a/templates/showimage.html
+++ b/templates/showimage.html
@@ -1,3 +1,14 @@
 <!--img :height="{{ height }}"  style="width:100%; object-fit: contain" v-bind:src="fullpath(file)"-->    
 
-<img id="image_id" height="{{ height }}" style="max-width: 100%;  object-fit: contain" onload="set_active('{{ file_name }}')" src="{{ url_for('send_image', filename=image) }}">
+<img id="image_id" height="{{ height }}" 
+hx-target="#content_window" 
+{% if loop_time|int > 0 %}
+hx-trigger="every {{ loop_time }}s"
+{% endif %}
+hx-get="/next_file"
+hx-swap="innerHTML"
+style="max-width: 100%;  object-fit: contain" 
+onload="set_active('{{ file_name }}')" src="{{ url_for('send_image', filename=image) }}">
+<span>
+{{ image }}
+</span>
