--- a/templates/listing.html
+++ b/templates/listing.html
@@ -1,10 +1,6 @@
 
+
 <span class="d-block">
-    <a hx-get="/file_listing?current_path={{ current_path }}" hx-target="#listing-div" hx-swap="innerHTML">
-    {{ current_path }}
-</span>
-<span class="d-block">
-    <a hx-get="/file_listing?current_path={{ parent_path }}" hx-target="#listing-div" hx-swap="innerHTML"><--</a> 
     <input type="search" 
        name="filter" placeholder="Begin Typing To Filter" 
        hx-post="/file_listing" 
@@ -12,13 +8,18 @@
        hx-target="#listing-div" 
        hx-indicator=".htmx-indicator"
        value="{{ filter_str }}"
-       id="filter">
-    <a hx-get="/next_file" hx-target="#content_window" hx-swap="innerHTML">Next File</a> 
+       id="filter"> 
+    | <a class="btn-small" hx-get="/next_file" hx-target="#content_window" hx-swap="innerHTML">Play Next</a> 
+</span>
+<span class="d-block">
+    <a hx-get="/file_listing?current_path={{ current_path }}" hx-target="#listing-div" hx-swap="innerHTML">
+    {{ current_path }}</a>
 </span>
 
-</a>
 <div style="width: 380px; overflow-y: scroll; height:100%" class="overflow-auto">
     <ul id="file_list" class="list-group">
+            <li class="list-group-item bg-grey" ><a hx-get="/file_listing?current_path={{ parent_path }}" hx-target="#listing-div" hx-swap="innerHTML">/parent directory..</a> 
+            </li>
     {% for file in files %}
         {% if file.isfile %}
             <li id="{{ file.id }}" class="list-group-item bg-grey" hx-get="/play_file?current_path={{ current_path + "/" + file.name }}" hx-trigger="click"  hx-target="#content_window">{{ file.name }} - {{ file.size }} </li>
