looping working well and also hiding of file browser

--- a/templates/index.html
+++ b/templates/index.html
@@ -88,13 +88,7 @@
         .navbar-toggler-icon{
             height: 25px !important;
         }
-
-        .btn-small:focus {
-            outline: 0;
-        }
-        .btn-small:hover {
-            outline: 0;
-        }
+        
 
     </style>
 </head>
@@ -103,7 +97,7 @@
         <div class="container-fluid">
           <span>
             <span class="navbar-brand">Player</span>
-            <button type="button" class="btn-small btn-dark dropdown-toggle" data-bs-target="#listing-div" data-bs-toggle="collapse">
+            <button type="button" style="outline: 0; box-shadow: none" class="btn-small btn-dark dropdown-toggle" data-bs-target="#listing-div" data-bs-toggle="collapse">
                 <span>File Browser</span>
             </button>
           </span>
