--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
         <div class="container-fluid">
           <span>
             <span class="navbar-brand">Player</span>
-            <button type="button" style="outline: 0; box-shadow: none" class="btn-small btn-dark dropdown-toggle" data-bs-target="#listing-div" data-bs-toggle="collapse">
+            <button type="button" style="outline: 0; box-shadow: none" class="btn btn-dark dropdown-toggle" data-bs-target="#listing-div" data-bs-toggle="collapse">
                 <span>File Browser</span>
             </button>
           </span>
