--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <script src="https://unpkg.com/htmx.org@2.0.2" integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
@@ -97,7 +101,7 @@
         <div class="container-fluid">
           <span>
             <span class="navbar-brand">Player</span>
-            <button type="button" style="outline: 0; box-shadow: none" class="btn btn-dark dropdown-toggle" data-bs-target="#listing-div" data-bs-toggle="collapse">
+            <button type="button" style="outline: 0; box-shadow: none" class="btn btn-dark dropdown-toggle" data-bs-target="#collapse-div" data-bs-toggle="collapse">
                 <span>File Browser</span>
             </button>
           </span>
@@ -111,7 +115,9 @@
     
     <main>
         <div class="wrapper">
-            <div id="listing-div" class="collapse show" style="height: {{ height }}px" hx-get="/file_listing" hx-trigger="load" hx-swap="innerHTML" class="overflow-auto" aria-expanded="false"></div>
+            <div id="collapse-div" class="collapse show">
+                <div id="listing-div" style="height: {{ height }}px" hx-get="/file_listing" hx-trigger="load" hx-swap="innerHTML"></div>
+            </div>
             <div id="content_window" class="container-fluid"> Watch this space... </div>
         </div>
     </main>
